customer-k8s/customer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: zyllion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: 'v1'
  template:
    metadata:
      labels:
        app: customer
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - customer
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: customer-app
          image: latishmk/customer
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8086
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
