customer-k8s/customer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: zyllion
  labels:
    app: customer
spec:
  selector:
    app: customer
  ports:
    - name: http
      port: 80
      targetPort: 8086
