customer-k8s/customer-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-virtualservice
  namespace: zyllion
spec:
  hosts:
    - customer
  http:
    - route:
        - destination:
            host: customer
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
